Fixed aligning issues with PrayerTimes component and added device detection to adjust mobile layout

--- a/src/components/PrayerTimes/PrayerTimes.css
+++ b/src/components/PrayerTimes/PrayerTimes.css
@@ -5,7 +5,7 @@
   border: gold solid 3px;
   border-right: 0;
   border-radius: 30px 0px 0px 30px;
-  margin-top: -100px;
+  margin-top: 50px;
   padding: 20px;
   right: 0;
   gap: 5px;
